# controllers/hirings.controller.js
@@ -7,6 +7,8 @@ const ObjectId = require('mongodb').ObjectId;
 _this = this;
 
 exports.createHiring = async function (req, res) {
+    // #swagger.tags = ['Contrataciones'];
+    // #swagger.description = ''
     try {
         if (req.user_role == "alumno") {
             const identifier= {_id: ObjectId(req.body.claseId)}
@@ -37,6 +39,8 @@ exports.createHiring = async function (req, res) {
 }
 
 exports.getHirings = async function (req, res) {
+    // #swagger.tags = ['Contrataciones'];
+    // #swagger.description = ''
     try {
         const Users = await Contratacion.find({}
         ).populate('clase'
@@ -48,6 +52,8 @@ exports.getHirings = async function (req, res) {
 }
 
 exports.getHiringById = async function (req, res) {
+    // #swagger.tags = ['Contrataciones'];
+    // #swagger.description = ''
     try {
         const identifier= {_id: ObjectId(req.params.id)}
         const User = await Contratacion.findOne(identifier
@@ -60,6 +66,8 @@ exports.getHiringById = async function (req, res) {
 }
 
 exports.approveHiring = async function (req, res) {
+    // #swagger.tags = ['Contrataciones'];
+    // #swagger.description = ''
     try {
         if (req.user_role == "profesor") {
             const identifier= {_id: ObjectId(req.body.contratacionId)}
@@ -93,6 +101,8 @@ exports.approveHiring = async function (req, res) {
 }
 
 exports.removeHiring = async function (req, res, next) {
+    // #swagger.tags = ['Contrataciones'];
+    // #swagger.description = ''
     try {
         const identifier= {_id: ObjectId(req.params.id)}
         const hiringDeleted = await Contratacion.remove(identifier)
