# controllers/qualifications.controller.js
@@ -5,6 +5,8 @@ const ObjectId = require('mongodb').ObjectId;
 _this = this;
 
 exports.createQualification = async function (req, res) {
+    // #swagger.tags = ['Calificaciones'];
+    // #swagger.description = ''
     try {
         const claseCalificada = await Clase.findOne(req.body.claseId)
         const nuevaCalificacion = new Calificacion({
@@ -22,6 +24,8 @@ exports.createQualification = async function (req, res) {
 }
 
 exports.getQualifications = async function (req, res) {
+    // #swagger.tags = ['Calificaciones'];
+    // #swagger.description = ''
     try {
         const Qualifications = await Calificacion.find({}
             ).populate('clase'
@@ -33,6 +37,8 @@ exports.getQualifications = async function (req, res) {
 }
 
 exports.getQualificationById = async function (req, res) {
+    // #swagger.tags = ['Calificaciones'];
+    // #swagger.description = ''
     try {
         const identifier= {_id: ObjectId(req.params.id)}
         const Qualification = await Calificacion.findOne(identifier
@@ -45,6 +51,8 @@ exports.getQualificationById = async function (req, res) {
 }
 
 exports.removeQualification = async function (req, res) {
+    // #swagger.tags = ['Calificaciones'];
+    // #swagger.description = ''
     try {
         const identifier= {_id: ObjectId(req.params.id)}
         const qualificationToDelete = await findOne(identifier)
